# aiven-poke

./: .dockerignore  .gitignore  .prospector.yaml  Dockerfile  Earthfile  README.md  earthlyw  flake.nix  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: chart.yaml  codeql.yml  main.yaml
aiven_poke/: __main__.py  aiven.py  cluster.py  endpoints.py  errors.py  main.py  models.py  settings.py  slack.py
aiven_poke/cluster/: __init__.py  models.py  resources.py
aiven_poke/slack/: __init__.py  payload.py  topics.py  users.py
charts/: Chart.yaml  values.yaml
charts/aiven-poke/: Chart.yaml  Feature.yaml  values.yaml
charts/aiven-poke/templates/: NOTES.txt  alert.yaml  job.yaml  network-policy-apiserver.yaml  rbac.yaml  secret.yaml
charts/templates/: NOTES.txt  _helpers.tpl  alert.yaml  job.yaml  network-policy-apiserver.yaml
mise/tasks/: fmt  fmt-check  lint  lint-fix
nais/: aiven-poke.yaml  alert.yaml  network-policy-apiserver.yaml
tests/: test_aiven.py  test_compare.py  test_slack.py
