[tool.poetry]
name = "aiven-poke"
version = "0.1.0"
description = "Poke teams about Aiven related issues"
authors = ["NAIS <aura@nav.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.2"
fiaas-logging = "^0.1.1"
pydantic = "^2.12.5"
requests = "^2"
requests-toolbelt = "^1.0.0"
prometheus-client = "^0.24.1"
pydantic-settings = "^2.12.0"
lightkube = "^0.19.1"

[tool.poetry.group.dev.dependencies]
setuptools = "^80.10.2"
pytest = "^8"
prospector = "^1"
pytest-cov = "^6"
pytest-sugar = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
