[project]
name = "aiven-poke"
version = "0.1.0"
description = "Poke teams about Aiven related issues"
authors = [{name = "Nais", email = "nais@nav.no"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.1.3,<4",
    "fiaas-logging>=0.1.1,<0.2",
    "pydantic>=2.13.0,<3",
    "requests>=2,<3",
    "requests-toolbelt>=1.0.0,<2",
    "prometheus-client>=0.25.0,<0.26",
    "pydantic-settings>=2.13.1,<3",
    "lightkube>=0.20.0,<0.22.0",
]

[dependency-groups]
dev = [
    "setuptools>=82.0.1",
    "pytest>=9",
    "pytest-cov>=7",
    "pytest-sugar>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiven_poke"]

[tool.ruff]
line-length = 120
